--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -86,17 +86,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3e543a4b-2655-4da9-a4f8-b57269d8d2ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def my_function():\n",
     "    \"\"\"\n",
     "    The output of this function will be tested (it must return True).\n",
     "    \"\"\"\n",
     "\n",
-    "    return NotImplemented\n",
+    "    return True\n",
     "\n",
     "my_function()"
    ]
@@ -243,10 +254,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "458c4dbf-a9fa-4d97-b339-faf1d519d7b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'my_rounding_function' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 21\u001b[39m\n\u001b[32m     18\u001b[39m         \u001b[38;5;28;01massert\u001b[39;00m actual_output == expected_output, message\n\u001b[32m     20\u001b[39m \u001b[38;5;66;03m# Run our new testing function.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m \u001b[43mtest_my_rounding_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 14\u001b[39m, in \u001b[36mtest_my_rounding_function\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      4\u001b[39m test_cases = [\n\u001b[32m      5\u001b[39m     (\u001b[32m0.75\u001b[39m, \u001b[32m1\u001b[39m),\n\u001b[32m      6\u001b[39m     (\u001b[32m0.50\u001b[39m, \u001b[32m1\u001b[39m),\n\u001b[32m   (...)\u001b[39m\u001b[32m     10\u001b[39m     (-\u001b[32m0.75\u001b[39m, -\u001b[32m1\u001b[39m),\n\u001b[32m     11\u001b[39m ]\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m (input_value, expected_output) \u001b[38;5;129;01min\u001b[39;00m test_cases:\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m     actual_output = \u001b[43mmy_rounding_function\u001b[49m(input_value)\n\u001b[32m     16\u001b[39m     message = \u001b[33m\"\u001b[39m\u001b[33mInput: \u001b[39m\u001b[38;5;132;01m%f\u001b[39;00m\u001b[33m, Expected Output: \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[33m, Actual Output: \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[33m\"\u001b[39m % (\n\u001b[32m     17\u001b[39m         input_value, expected_output, actual_output)\n\u001b[32m     18\u001b[39m     \u001b[38;5;28;01massert\u001b[39;00m actual_output == expected_output, message\n",
+      "\u001b[31mNameError\u001b[39m: name 'my_rounding_function' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def test_my_rounding_function():\n",
     "    # Test cases that we manually came up with organized in (input, expected output) pairs.\n",
@@ -295,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8e05b701-8dc2-4d63-9cb8-1b7ebf85f69e",
    "metadata": {},
    "outputs": [],
@@ -353,10 +377,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "918d33c1-064f-48ce-a45e-22dd68c3e7a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'autograder' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mTestMyRoundingFunction\u001b[39;00m(\u001b[43mautograder\u001b[49m.question.Question):\n\u001b[32m      2\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mscore_question\u001b[39m(\u001b[38;5;28mself\u001b[39m, submission):\n\u001b[32m      3\u001b[39m         \u001b[38;5;66;03m# The submission object contains all the code we are testing.\u001b[39;00m\n\u001b[32m      4\u001b[39m         \u001b[38;5;66;03m# For the graders, this usually means all the code cells in this notebook.\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m      7\u001b[39m         \u001b[38;5;66;03m# We can use a very similar structure to the previous test we wrote\u001b[39;00m\n\u001b[32m      8\u001b[39m         \u001b[38;5;66;03m# (test_my_rounding_function()).\u001b[39;00m\n\u001b[32m      9\u001b[39m         test_cases = [\n\u001b[32m     10\u001b[39m             (\u001b[32m0.75\u001b[39m, \u001b[32m1\u001b[39m),\n\u001b[32m     11\u001b[39m             (\u001b[32m0.50\u001b[39m, \u001b[32m1\u001b[39m),\n\u001b[32m   (...)\u001b[39m\u001b[32m     15\u001b[39m             (-\u001b[32m0.75\u001b[39m, -\u001b[32m1\u001b[39m),\n\u001b[32m     16\u001b[39m         ]\n",
+      "\u001b[31mNameError\u001b[39m: name 'autograder' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class TestMyRoundingFunction(autograder.question.Question):\n",
     "    def score_question(self, submission):\n",
@@ -441,10 +477,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2021314f-468d-49f1-8f97-6b91a7a508a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'autograder' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mTestMyFunction\u001b[39;00m(\u001b[43mautograder\u001b[49m.question.Question):\n\u001b[32m      2\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mscore_question\u001b[39m(\u001b[38;5;28mself\u001b[39m, submission):\n\u001b[32m      3\u001b[39m         \u001b[38;5;66;03m# We cal call your code using the submission object.\u001b[39;00m\n\u001b[32m      4\u001b[39m         result = submission.my_function()\n",
+      "\u001b[31mNameError\u001b[39m: name 'autograder' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class TestMyFunction(autograder.question.Question):\n",
     "    def score_question(self, submission):\n",
@@ -608,7 +656,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -622,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
